--- a/MerlionPortal/MerlionPortal-war/web/mrp/forecastresult.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/forecastresult.xhtml
@@ -3,57 +3,63 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">  
-    <h:head>
-        <title>Forecast Result</title>
-        <style type="text/css">
-            .gritter-notice-wrapper {
-                left:200px;
-                top: 50px;
-            }
-        </style>
-        <style>
-            h1   {color:#E9967A}
-        </style>
-    </h:head>
-    <h:body>
-        <h:form>
-            <h1>Welcome to MRP II system</h1>
-            <p:megaMenu  style="margin-top:20px">
-                <p:menuitem value="MRP II" url="mrp.xhtml" />
-                <p:submenu label="Product Management" >
-                    <p:column>
-                        <p:submenu label="Product Catalog Management">
-                            <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
-                            <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
-                        </p:submenu>
-                        <p:submenu label="BOM Management">
-                            <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
-                            <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
-                        </p:submenu>
-                    </p:column>
-                </p:submenu>
-                <p:submenu label="Material Requirement Planning" >
-                    <p:column>
-                        <p:submenu label="Forecasting">
-                            <p:menuitem value="Forecasting" url="forecast.xhtml" />
-                        </p:submenu>
-                    </p:column>
-                </p:submenu>
-            </p:megaMenu>
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">  
 
+    <c:set var="import" value="templateuser.xhtml"/>
+    <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
+        <c:set var="import" value="templateadmin.xhtml"/>
+    </c:if>
+
+    <ui:composition template="${root}/templates/${import}">        
+        <ui:param name="pageName" value="MRP II Add New Product" />
+
+        <ui:define name="more-imports">
+            <ui:insert>
+                <!--                import CSS style or Javascript here, if any-->
+            </ui:insert>
+        </ui:define>
+
+        <ui:define name="left">
+            <p:panelMenu>
+                <p:menuitem value="MRP II" url="mrp.xhtml" />
+                <p:submenu label="Product Management">
+
+                    <p:submenu label="Product Catalog Management">
+                        <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
+                        <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="BOM Management">
+                        <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
+                        <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
+                    </p:submenu>
+
+                </p:submenu>
+                <p:submenu label="Material Requirement Planning">
+
+                    <p:submenu label="Forecasting">
+                        <p:menuitem value="Forecasting" url="forecast.xhtml" />
+                    </p:submenu>
+
+                </p:submenu>
+            </p:panelMenu>
+
+        </ui:define>
+
+        <ui:define name="right">
+            <h:form>
                 <p:panel header="View Forecast Result" style="margin-bottom:10px;">
                     <p:chart type="line" model="#{forecastResultManagedBean.forecastSales}" style="height:300px" />
                 </p:panel>
-            <p:panel header="Satisfied with the result?" style="margin-bottom:10px;"> 
-                <h:panelGrid columns="1" style="margin-bottom:10px" cellpadding="5">
+                <p:panel header="Satisfied with the result?" style="margin-bottom:10px;"> 
+                    <h:panelGrid columns="1" style="margin-bottom:10px" cellpadding="5">
 
-                    <p:commandButton value="Proceed"  action="#{forecastManagedBean.proceedMPS}" />
-                    <p:commandButton value="Go Back"  action="#{forecastManagedBean.goBackForecastParameter}" />
-                </h:panelGrid>
-            </p:panel>
-        </h:form>
-    </h:body>
+                        <p:commandButton value="Proceed"  action="#{forecastManagedBean.proceedMPS}" />
+                        <p:commandButton value="Go Back"  action="#{forecastManagedBean.goBackForecastParameter}" />
+                    </h:panelGrid>
+                </p:panel>
+            </h:form>
+        </ui:define>
+    </ui:composition>
 </html>
 
